kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/constraintchecker_tests/invalid/003_associations_02.kmt
/* $Id: 003_associations_02.kmt,v 1.1 2007-09-10 08:35:12 cfaucher Exp $ */

// Test of a invalid associations

package root_package;


/* double composition*/
class A {
    attribute b : B#a
}
class B {
	attribute a : A#b
}
